# plugin_system

./: .clang-format  CMakeLists.txt  README.md  config.yaml  main.cpp
include/: PluginAPI.h  PluginManager.h  SimpleConfig.h
plugins/core_monitor/include/: CoreMonitorPlugin.h
plugins/core_monitor/src/: CoreMonitorPlugin.cpp
src/: PluginManager.cpp  SimpleConfig.cpp
